Swagger docs looking better
