# raceservice/endpoints.go
@@ -50,25 +50,17 @@ func MakeClientEndpoints(instance string) (Endpoints, error) {
 }
 
 // GetNextRaces retrieves the next N races that will be run
-// swagger:route GET /races Races listRaces
-//
-// Lists the next N races.
-//
-// This will show the next 5 races by default.
-//
-//     Consumes:
-//     - application/json
-//
-//     Produces:
-//     - application/json
-//
-//     Schemes: http, https
-//
-//     Responses:
-//       default: genericError
-//       200: racesResponse
-//       422: validationError
 func (e Endpoints) GetNextRaces(ctx context.Context, numRaces int) (models.Races, error) {
+	// swagger:route GET /races Races listRaces
+	//
+	// Gets the next N races.
+	//
+	// Gets the next 5 races by default.
+	//
+	//   Responses:
+	//     default: genericError
+	//     200: racesResponse
+	//     422: validationError
 	request := payloads.RacesReq{NumRaces: numRaces}
 	response, err := e.GetRacesEndpoint(ctx, request)
 	if err != nil {
@@ -80,6 +72,14 @@ func (e Endpoints) GetNextRaces(ctx context.Context, numRaces int) (models.Races
 
 // GetRaceDetails retrieves all the details the user needs to see for a given race
 func (e Endpoints) GetRaceDetails(ctx context.Context, raceID string) (*models.RaceDetails, error) {
+	// swagger:route GET /race/{id} Race getRace
+	//
+	// Gets the race details
+	//
+	//   Responses:
+	//     default: raceDetailsResponse
+	//     200: raceDetailsResponse
+	//     422: raceDetailsResponse
 	request := payloads.RaceDetailsReq{RaceID: raceID}
 	response, err := e.GetRaceEndpoint(ctx, request)
 	if err != nil {
